--- a/trialarea.html
+++ b/trialarea.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Dashboard copy.css" />
+    <link rel="stylesheet" href="dashboard2.css" />
     <link rel="stylesheet" href="Dashboard.css" />
     <link rel="stylesheet" href="index.css" />
 
@@ -226,7 +226,7 @@
       </div>
       <div class="dash-container-modification-area">
         <div class="dash-listing-title">
-          List of all skills
+          List of all Blogs
         </div>
         <div class="all-blogs-list">
           <div class="dash-for-every-message">
@@ -247,4 +247,5 @@
         </div>
     </div>
   </body>
+  <script src="index.js"></script>
 </html>
