--- a/trialarea2.html
+++ b/trialarea2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Dashboard copy.css" />
+    <link rel="stylesheet" href="Dashboard2.css" />
     <link rel="stylesheet" href="Dashboard.css" />
     <link rel="stylesheet" href="Skills.css" />
     <link rel="stylesheet" href="index.css" />
@@ -120,7 +120,7 @@
           >
         </div>
         <div>
-          <a class="menu" id="users" href=""
+          <a class="menu" id="dash-all-users" href=""
             ><i class="fas fa-users"></i> <strong>Manage users</strong></a
           >
         </div>
@@ -130,7 +130,7 @@
           >
         </div>
         <div>
-          <a class="menu" id="message" href=""
+          <a class="menu" id="dash-all-messages" href="#"
             ><i class="fas fa-envelope"></i> <strong>Messages</strong></a
           >
         </div>
@@ -203,4 +203,5 @@
       </div>
     </div>
   </body>
+  <script src="index.js"></script>
 </html>
