--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <img
           class="profilepic"
-          src="Icons/profilePic1.jpg"
+          src="Icons/PXL_20240101_002447172~2.jpg"
           alt="Profile Picture"
         />
       </div>
@@ -49,11 +49,11 @@
       </div>
     </div>
     <div class="hm-menu">
-      <a href="#home">Home</a>
-      <a href="#about-me">About Me</a>
-      <a href="#skills">My skills</a>
-      <a href="#articles">Articles</a>
-      <a href="#dashboard">Dashboard</a>
+      <a href="#home" class="menu-link">Home</a>
+      <a href="#about-me" class="menu-link">About Me</a>
+      <a href="#skills" class="menu-link">My skills</a>
+      <a href="#articles" class="menu-link">Articles</a>
+      <a href="#dashboard" class="menu-link">Dashboard</a>
     </div>
     <div class="hm-main">
       <div class="hm-upperside">
@@ -177,7 +177,7 @@
             </div>
           </div>
         </div>
-        <button id="art-viewingBtn">View</button>
+        <a href="#art-view-section"><button id="art-viewingBtn">View</button></a>
       </div>
       <div class="for-every-article">
         <span id="title">My journal in coding life</span>
@@ -202,7 +202,7 @@
             </div>
           </div>
         </div>
-        <button id="art-viewingBtn">View</button>
+        <a href="#art-view-section"><button id="art-viewingBtn">View</button></a>
       </div>
       <div class="for-every-article">
         <span id="title">My journal in coding life</span>
@@ -227,7 +227,7 @@
             </div>
           </div>
         </div>
-        <button id="art-viewingBtn">View</button>
+        <a href="#art-view-section"><button id="art-viewingBtn">View</button></a>
       </div>
       <div class="for-every-article">
         <span id="title">My journal in coding life</span>
@@ -252,7 +252,7 @@
             </div>
           </div>
         </div>
-        <button id="art-viewingBtn">View</button>
+        <a href="#art-view-section"><button id="art-viewingBtn">View</button></a>
       </div>
       <div class="for-every-article">
         <span id="title">My journal in coding life</span>
@@ -277,7 +277,7 @@
             </div>
           </div>
         </div>
-        <button id="art-viewingBtn">View</button>
+        <a href="#art-view-section"><button id="art-viewingBtn">View</button></a>
       </div>
       <div class="for-every-article">
         <span id="title">My journal in coding life</span>
@@ -302,11 +302,11 @@
             </div>
           </div>
         </div>
-        <button id="art-viewingBtn">View</button>
+        <a href="#art-view-section"><button id="art-viewingBtn">View</button></a>
       </div>
     </div>
 
-    <div class="art-view">
+    <div class="art-view"  id="art-view-section">
       <div class="view-title">
         <strong>My journal in coding life</strong>
         <div class="view-author-detail"> 
@@ -421,7 +421,7 @@
         <div id="dash-about-artice">
           <span><strong>Manage Article</strong></span>
           <button class="dash-add-art"><i class="fas fa-plus"></i>Article</button>
-          <button class="dash-modify-art"><i class="fas fa-edit"></i>Article</button>
+          <button id="dash-art-editing" class="dash-modify-art"><i class="fas fa-edit"></i>Article</button>
         </div>
         <div>
           <a class="menu" id="dash-all-blogs" href=""
