I added some Js so that i can now add a new skills and delete it accordingly

--- a/index.html
+++ b/index.html
@@ -540,6 +540,7 @@
               <input type="email" name="" id="ft-sender's-email" placeholder="Your Email">
             </div>
             <textarea name="message" id="ft-message-to-admin" cols="10" rows="5" placeholder="Write your message here!"></textarea>
+             <div id="dash-message-error"></div>
             <button type="submit"  id="ft-submit-message"  onclick="addMessage()">send your Message</button>
           </div>
           <div class="quick-link">
@@ -569,8 +570,11 @@
         </div>
       </div>
     </footer>
-    <script src="index.js"></script>
-    <script src="Subscribe.js"></script>
-    <script src="crud.js"></script>
+    <script src="Js_scripts/index.js"></script>
+    <script src="Js_scripts/Subscribe.js"></script>
+    <script src="Js_scripts/adding_message.js"></script>
+    <script src="Js_scripts/message_extra_mod.js"></script>
+    <script src="Js_scripts/adding_skills.js"></script>
+    <script src="Js_scripts/skills_extra_mod.js"></script>
   </body>
 </html>
