i added date to the article and also all articles are showing up in their display section

--- a/index.html
+++ b/index.html
@@ -195,156 +195,159 @@
         </div>
       </div>
     </div>
-    <div class="articles-container" id="articles">
-      <div class="for-every-article">
-        <span id="title">My journal in coding life</span>
-        <div class="art-leftside">
-          <div class="art-topic-related-pic">
-            <img id="art-main-pic" src="Icons/For article 1.png" alt="" />
-          </div>
-          <div class="art-Right">
-            <img
-              class="art-pic-for-auth"
-              id="art-pic-for-auth"
-              src="Icons/profilePic1.jpg"
-              alt="Author's Picture"
-            />
-            <div class="art-description">
-              <span id="art-name-of-author"
-                ><strong>Author's name:</strong> Anaclet Nzagwaneza</span
-              >
-              <span id="uploadDate"
-                ><strong>Uploaded on</strong> 02 Feb 2024</span
-              >
+    <div id="articles">
+      <span id="listOfArticles">List of all blogs that you may read</span>
+      <div class="articles-container">
+        <div class="for-every-article">
+          <span id="title">My journal in coding life</span>
+          <div class="art-leftside">
+            <div class="art-topic-related-pic">
+              <img id="art-main-pic" src="Icons/For article 1.png" alt="" />
+            </div>
+            <div class="art-Right">
+              <img
+                class="art-pic-for-auth"
+                id="art-pic-for-auth"
+                src="Icons/profilePic1.jpg"
+                alt="Author's Picture"
+              />
+              <div class="art-description">
+                <span id="art-name-of-author"
+                  ><strong>Author's name:</strong> Anaclet Nzagwaneza</span
+                >
+                <span id="uploadDate"
+                  ><strong>Uploaded on</strong> 02 Feb 2024</span
+                >
+              </div>
             </div>
           </div>
+          <a href="#art-view-section"><button id="art-viewingBtn">View</button></a>
         </div>
-        <a href="#art-view-section"><button id="art-viewingBtn">View</button></a>
-      </div>
-      <div class="for-every-article">
-        <span id="title">My journal in coding life</span>
-        <div class="art-leftside">
-          <div class="art-topic-related-pic">
-            <img id="art-main-pic" src="Icons/For article 1.png" alt="" />
-          </div>
-          <div class="art-Right">
-            <img
-              class="art-pic-for-auth"
-              id="art-pic-for-auth"
-              src="Icons/profilePic1.jpg"
-              alt="Author's Picture"
-            />
-            <div class="art-description">
-              <span id="art-name-of-author"
-                ><strong>Author's name:</strong> Anaclet Nzagwaneza</span
-              >
-              <span id="uploadDate"
-                ><strong>Uploaded on</strong> 02 Feb 2024</span
-              >
+        <div class="for-every-article">
+          <span id="title">My journal in coding life</span>
+          <div class="art-leftside">
+            <div class="art-topic-related-pic">
+              <img id="art-main-pic" src="Icons/For article 1.png" alt="" />
+            </div>
+            <div class="art-Right">
+              <img
+                class="art-pic-for-auth"
+                id="art-pic-for-auth"
+                src="Icons/profilePic1.jpg"
+                alt="Author's Picture"
+              />
+              <div class="art-description">
+                <span id="art-name-of-author"
+                  ><strong>Author's name:</strong> Anaclet Nzagwaneza</span
+                >
+                <span id="uploadDate"
+                  ><strong>Uploaded on</strong> 02 Feb 2024</span
+                >
+              </div>
             </div>
           </div>
+          <a href="#art-view-section"><button id="art-viewingBtn">View</button></a>
         </div>
-        <a href="#art-view-section"><button id="art-viewingBtn">View</button></a>
-      </div>
-      <div class="for-every-article">
-        <span id="title">My journal in coding life</span>
-        <div class="art-leftside">
-          <div class="art-topic-related-pic">
-            <img id="art-main-pic" src="Icons/For article 1.png" alt="" />
-          </div>
-          <div class="art-Right">
-            <img
-              class="art-pic-for-auth"
-              id="art-pic-for-auth"
-              src="Icons/profilePic1.jpg"
-              alt="Author's Picture"
-            />
-            <div class="art-description">
-              <span id="art-name-of-author"
-                ><strong>Author's name:</strong> Anaclet Nzagwaneza</span
-              >
-              <span id="uploadDate"
-                ><strong>Uploaded on</strong> 02 Feb 2024</span
-              >
+        <div class="for-every-article">
+          <span id="title">My journal in coding life</span>
+          <div class="art-leftside">
+            <div class="art-topic-related-pic">
+              <img id="art-main-pic" src="Icons/For article 1.png" alt="" />
+            </div>
+            <div class="art-Right">
+              <img
+                class="art-pic-for-auth"
+                id="art-pic-for-auth"
+                src="Icons/profilePic1.jpg"
+                alt="Author's Picture"
+              />
+              <div class="art-description">
+                <span id="art-name-of-author"
+                  ><strong>Author's name:</strong> Anaclet Nzagwaneza</span
+                >
+                <span id="uploadDate"
+                  ><strong>Uploaded on</strong> 02 Feb 2024</span
+                >
+              </div>
             </div>
           </div>
+          <a href="#art-view-section"><button id="art-viewingBtn">View</button></a>
         </div>
-        <a href="#art-view-section"><button id="art-viewingBtn">View</button></a>
-      </div>
-      <div class="for-every-article">
-        <span id="title">My journal in coding life</span>
-        <div class="art-leftside">
-          <div class="art-topic-related-pic">
-            <img id="art-main-pic" src="Icons/For article 1.png" alt="" />
-          </div>
-          <div class="art-Right">
-            <img
-              class="art-pic-for-auth"
-              id="art-pic-for-auth"
-              src="Icons/profilePic1.jpg"
-              alt="Author's Picture"
-            />
-            <div class="art-description">
-              <span id="art-name-of-author"
-                ><strong>Author's name:</strong> Anaclet Nzagwaneza</span
-              >
-              <span id="uploadDate"
-                ><strong>Uploaded on</strong> 02 Feb 2024</span
-              >
+        <div class="for-every-article">
+          <span id="title">My journal in coding life</span>
+          <div class="art-leftside">
+            <div class="art-topic-related-pic">
+              <img id="art-main-pic" src="Icons/For article 1.png" alt="" />
+            </div>
+            <div class="art-Right">
+              <img
+                class="art-pic-for-auth"
+                id="art-pic-for-auth"
+                src="Icons/profilePic1.jpg"
+                alt="Author's Picture"
+              />
+              <div class="art-description">
+                <span id="art-name-of-author"
+                  ><strong>Author's name:</strong> Anaclet Nzagwaneza</span
+                >
+                <span id="uploadDate"
+                  ><strong>Uploaded on</strong> 02 Feb 2024</span
+                >
+              </div>
             </div>
           </div>
+          <a href="#art-view-section"><button id="art-viewingBtn">View</button></a>
         </div>
-        <a href="#art-view-section"><button id="art-viewingBtn">View</button></a>
-      </div>
-      <div class="for-every-article">
-        <span id="title">My journal in coding life</span>
-        <div class="art-leftside">
-          <div class="art-topic-related-pic">
-            <img id="art-main-pic" src="Icons/For article 1.png" alt="" />
-          </div>
-          <div class="art-Right">
-            <img
-              class="art-pic-for-auth"
-              id="art-pic-for-auth"
-              src="Icons/profilePic1.jpg"
-              alt="Author's Picture"
-            />
-            <div class="art-description">
-              <span id="art-name-of-author"
-                ><strong>Author's name:</strong> Anaclet Nzagwaneza</span
-              >
-              <span id="uploadDate"
-                ><strong>Uploaded on</strong> 02 Feb 2024</span
-              >
+        <div class="for-every-article">
+          <span id="title">My journal in coding life</span>
+          <div class="art-leftside">
+            <div class="art-topic-related-pic">
+              <img id="art-main-pic" src="Icons/For article 1.png" alt="" />
+            </div>
+            <div class="art-Right">
+              <img
+                class="art-pic-for-auth"
+                id="art-pic-for-auth"
+                src="Icons/profilePic1.jpg"
+                alt="Author's Picture"
+              />
+              <div class="art-description">
+                <span id="art-name-of-author"
+                  ><strong>Author's name:</strong> Anaclet Nzagwaneza</span
+                >
+                <span id="uploadDate"
+                  ><strong>Uploaded on</strong> 02 Feb 2024</span
+                >
+              </div>
             </div>
           </div>
+          <a href="#art-view-section"><button id="art-viewingBtn">View</button></a>
         </div>
-        <a href="#art-view-section"><button id="art-viewingBtn">View</button></a>
-      </div>
-      <div class="for-every-article">
-        <span id="title">My journal in coding life</span>
-        <div class="art-leftside">
-          <div class="art-topic-related-pic">
-            <img id="art-main-pic" src="Icons/For article 1.png" alt="" />
-          </div>
-          <div class="art-Right">
-            <img
-              class="art-pic-for-auth"
-              id="art-pic-for-auth"
-              src="Icons/profilePic1.jpg"
-              alt="Author's Picture"
-            />
-            <div class="art-description">
-              <span id="art-name-of-author"
-                ><strong>Author's name:</strong> Anaclet Nzagwaneza</span
-              >
-              <span id="uploadDate"
-                ><strong>Uploaded on</strong> 02 Feb 2024</span
-              >
+        <div class="for-every-article">
+          <span id="title">My journal in coding life</span>
+          <div class="art-leftside">
+            <div class="art-topic-related-pic">
+              <img id="art-main-pic" src="Icons/For article 1.png" alt="" />
+            </div>
+            <div class="art-Right">
+              <img
+                class="art-pic-for-auth"
+                id="art-pic-for-auth"
+                src="Icons/profilePic1.jpg"
+                alt="Author's Picture"
+              />
+              <div class="art-description">
+                <span id="art-name-of-author"
+                  ><strong>Author's name:</strong> Anaclet Nzagwaneza</span
+                >
+                <span id="uploadDate"
+                  ><strong>Uploaded on</strong> 02 Feb 2024</span
+                >
+              </div>
             </div>
           </div>
+          <a href="#art-view-section"><button id="art-viewingBtn">View</button></a>
         </div>
-        <a href="#art-view-section"><button id="art-viewingBtn">View</button></a>
       </div>
     </div>
 
@@ -580,5 +583,6 @@
     <script src="Js_scripts/SkillFromLsToSection.js"></script>
     <script src="Js_scripts/blogsToLS.js"></script>
     <script src="Js_scripts/blogsToDash.js"></script>
+    <script src="Js_scripts/blogsFromLsToSection.js"></script>
   </body>
 </html>
