Now, articles can be added to their display zone

--- a/index.html
+++ b/index.html
@@ -351,9 +351,9 @@
       </div>
     </div>
 
-    <div class="art-view"  id="art-view-section">
+    <div class="art-view"  id="art-view-section" style="display: none;">
       <div class="view-title">
-        <strong>My journal in coding life</strong>
+        <strong id="blog-title-view">My journal in coding life</strong>
         <div class="view-author-detail"> 
           <author>Anaclet Nzagwaneza</author>
         </div>
@@ -584,5 +584,6 @@
     <script src="Js_scripts/blogsToLS.js"></script>
     <script src="Js_scripts/blogsToDash.js"></script>
     <script src="Js_scripts/blogsFromLsToSection.js"></script>
+    <script src="Js_scripts/articleViewBtn.js"></script>
   </body>
 </html>
