I added some scroll effect on Header menu

--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
       </div>
     </div>
     <div class="hm-menu">
-      <a href="#home" class="menu-link">Home</a>
-      <a href="#about-me" class="menu-link">About Me</a>
-      <a href="#skills" class="menu-link">My skills</a>
-      <a href="#articles" class="menu-link">Articles</a>
-      <a href="#dashboard" class="menu-link">Dashboard</a>
+      <a href="#" class="menu-link" id="scrollHome">Home</a>
+      <a href="#" class="menu-link" id="scrollAbout">About Me</a>
+      <a href="#" class="menu-link" id="scrollSkills">My skills</a>
+      <a href="#" class="menu-link" id="scrollArticles">Articles</a>
+      <a href="#" class="menu-link" id="scrollDash">Dashboard</a>
     </div>
     <div class="hm-main">
       <div class="hm-upperside">
@@ -145,7 +145,9 @@
       </div>
     </div>
     <div class="skills-section" id="skills">
-      <strong>My skills are summarized here below:</strong>
+      <strong>My Skill Set: A Comprehensive Overview</strong>
+      <p>Below is a detailed summary of my skills and expertise, highlighting the areas where 
+        I excel and the capabilities I bring to the table. </p>
       <div id="skills-container">
         <div class="skill-item">
           <strong>Programming language <br /></strong>
@@ -196,7 +198,10 @@
       </div>
     </div>
     <div id="articles">
-      <span id="listOfArticles">List of all blogs that you may read</span>
+      <span id="listOfArticles">Explore Our Collection: Blogs You Won't Want to Miss</span>
+      <p id="listOfArticlesIntro">Dive into our curated selection of blogs designed to inform, inspire, 
+        and entertain. Whether you're looking for expert insights, practical advice, 
+        or just a good read, we have something for everyone. </p>
       <div class="articles-container">
         <div class="for-every-article">
           <span id="title">My journal in coding life</span>
@@ -584,6 +589,6 @@
     <script src="Js_scripts/blogsToLS.js"></script>
     <script src="Js_scripts/blogsToDash.js"></script>
     <script src="Js_scripts/blogsFromLsToSection.js"></script>
-    <script src="Js_scripts/articleViewBtn.js"></script>
+    <script src="Js_scripts/articleViewBtnsAndScrolls.js"></script>
   </body>
 </html>
